# gniza4linux

./: .gitignore  .impeccable.md  .mcp.json  DOCUMENTATION.md  README.md  pyproject.toml
.ship-safe/: context.json  history.json
daemon/: __main__.py  core.py  notify.py
debian/: control  copyright  postinst  postrm  prerm
etc/: gniza-daemon.service  gniza-web.service  gniza.conf.example  remote.conf.example  schedule.conf.example  target.conf.example
lib/: auto_configure.py  backup.sh  backup_orchestrator.py  cli_runner.py  config.py  config.sh  connection_test.py  constants.sh  crontab.sh  db_common.sh  email_template.py  health.sh  job_register.py  job_utils.py  locking.sh  logging.sh  models.py  mysql.sh  notify.sh  notify_py.py  postgresql.sh  rclone.sh  remotes.sh  restore.sh  retention.sh  schedule.sh  snaplog.sh  snapshot.sh  source.sh  ssh.py  ssh.sh  ssh_auto_configure.py  ssh_utils.py  targets.sh  transfer.sh  ui_backup.sh  ui_common.sh  ui_logs.sh  ui_main.sh  ui_remotes.sh  (+11 more)
plans/: integration-tests.md
rpm/: gniza.spec
scripts/: build-deb.sh  build-rpm.sh  deploy.sh  install.sh  setup-remote.sh  uninstall.sh  update.sh
tests/: conftest.py  test_backup_orchestrator.py  test_config.sh  test_config_parser.py  test_core_backup.py  test_core_cli.py  test_core_context.py  test_core_db.py  test_core_locking.py  test_core_rclone.py  test_core_restore.py  test_core_retention.py  test_core_snapshot.py  test_core_source.py  test_core_transfer.py  test_core_utils.py  test_integration.py  test_job_utils.py  test_models.py  test_security.py  test_targets.sh  (+2 more)
(+147 files in other folders)
