[project]
name = "gniza"
dynamic = ["version"]
description = "Linux Backup Manager"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.9"
dependencies = [
    "textual>=0.40",
    "textual-serve",
    "flask>=3.0",
    "flask-wtf",
    "flask-compress",
    "waitress",
    "psutil",
    "markupsafe",
    "markdown",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
